--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -2,4 +2,7 @@
 import BaseLayout from "@/layouts/BaseLayout.astro";
 ---
 <BaseLayout>
+    <div class="flex justify-center h-full align-center">
+        <h1>404 - Not found!</h1>
+    </div>
 </BaseLayout>
