--- a/src/pages/thoughts/[...slug].astro
+++ b/src/pages/thoughts/[...slug].astro
@@ -8,6 +8,9 @@ export async function getStaticPaths() {
   }));
 }
 const { entry } = Astro.props;
+if(!entry){
+  return new Response(null, { status: 404 })
+}
 const { Content } = await entry.render();
 ---
 <MarkdownPostLayout frontmatter={entry.data}>
