--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,10 +4,10 @@ import BaseLayout from "@/layouts/BaseLayout.astro";
 import EntriesOne from "@/components/entries/EntriesOne.astro";
 import Hero from "@/components/landing/Hero.astro";
 const allPosts = await getCollection("posts");
-const tags = [...new Set(allPosts.map((post) => post.data.tags).flat())];
 
 // Sort posts by date in descending order (newest first)
 const sortedPosts = allPosts.sort(
+  //@ts-ignore
   (a, b) => new Date(b.data.pubDate) - new Date(a.data.pubDate)
 );
 ---
@@ -16,15 +16,7 @@ const sortedPosts = allPosts.sort(
   <Hero />
   <section>
     <div class="px-8 md:px-12 mx-auto max-w-7xl py-12 lg:px-32">
-      <ol role="list" class="flex flex-wrap gap-3">
-        {
-          tags.map((tag) => (
-            <li class="inline-flex items-center uppercase mx-auto hover:text-blue-500 text-xs font-medium text-black">
-              <a href={`/tags/${tag}`}>{tag}</a>
-            </li>
-          ))
-        }
-      </ol>
+    
       <ul
         class="grid grid-cols-1 mt-12 gap-1 gap-y-24 lg:grid-cols-3 sm:grid-cols-2"
       >
@@ -38,7 +30,6 @@ const sortedPosts = allPosts.sort(
               pubDate={post.data.pubDate.toString().slice(0, 10)}
               author={post.data.author}
               image={post.data.image.url}
-              tags={post.data.tags}
             />
           ))
         }
