--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -5,7 +5,7 @@
         Andrew Hudson
       </h1>
     <p class="mt-9">
-      the stuff below is just holdovers from a template
+    This is my website. I believe the best design is as little design as possible.
     </p>
     </div>
     
