--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,6 @@
 ---
 import { getCollection } from "astro:content";
 import BaseLayout from "@/layouts/BaseLayout.astro";
-import EntriesOne from "@/components/entries/EntriesOne.astro";
 import Hero from "@/components/landing/Hero.astro";
 const allPosts = await getCollection("posts");
 
@@ -15,25 +14,6 @@ const sortedPosts = allPosts.sort(
 <BaseLayout>
   <Hero />
   <section>
-    <div class="px-8 md:px-12 mx-auto max-w-7xl py-12 lg:px-32">
-    
-      <!-- <ul
-        class="grid grid-cols-1 mt-12 gap-1 gap-y-24 lg:grid-cols-3 sm:grid-cols-2"
-      >
-        {
-          sortedPosts.map((post) => (
-            <EntriesOne
-              url={"/posts/" + post.slug}
-              title={post.data.title}
-              description={post.data.description}
-              alt={post.data.title}
-              pubDate={post.data.pubDate.toString().slice(0, 10)}
-              author={post.data.author}
-              image={post.data.image.url}
-            />
-          ))
-        }
-      </ul> -->
-    </div>
+    <div class="px-8 md:px-12 mx-auto max-w-7xl py-12 lg:px-32"></div>
   </section>
 </BaseLayout>
