--- a/src/pages/thoughts/index.astro
+++ b/src/pages/thoughts/index.astro
@@ -1,34 +1,55 @@
 ---
 import { getCollection } from "astro:content";
 import BaseLayout from "@/layouts/BaseLayout.astro";
-import EntriesOne from "@/components/entries/EntriesOne.astro";
-const allPosts = await getCollection("projects");
+import PostEntry from "@/components/entries/PostEntry.astro"
+const allPosts = await getCollection("thoughts");
 
 // Sort posts by date in descending order (newest first)
 const sortedPosts = allPosts.sort(
     //@ts-ignore
   (a, b) => new Date(b.data.pubDate) - new Date(a.data.pubDate)
 );
+const postsWithContent = await Promise.all(
+  sortedPosts.map(async (post) => {
+    const { Content } = await post.render();
+    return {
+      ...post,
+      Content
+    };
+  })
+);
 ---
 <BaseLayout>
-  <section>
-    <div class="px-8 md:px-12 mx-auto max-w-7xl py-12 lg:px-32">
+<style>
+  .pad2y {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+  .limiter {
+    max-width: 640px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    box-sizing: border-box;
+    overflow-x: hidden;
+  }
+  
+</style>
+    <div class="pad2y limiter content">
       <ul
-        class="grid grid-cols-1 mt-12 gap-1 gap-y-24 lg:grid-cols-3 sm:grid-cols-2"
       >
         {
-          sortedPosts.map((post) => (
-            <EntriesOne
-              url={"/projects/" + post.slug}
-              image={post.data.image?.url}
-              siteUrl={post.data.siteUrl}
-              title={post.data.name}
-              description={post.data.description}
-              alt={post.data.name}
-            />
+        postsWithContent.map((post) => (
+            <PostEntry
+              url={"/thoughts/" + post.slug }
+              pubDate={post.data.pubDate}
+              title={post.data.title}
+            >
+              <post.Content />
+            </PostEntry>
           ))
         }
       </ul>
     </div>
-  </section>
 </BaseLayout>
