--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -1,12 +1,13 @@
 <section >
   <div class="px-8 py-12 md:px-12 mx-auto lg:pb-24 max-w-7xl lg:px-32   lg:pt-32">
     <div class="lg:text-center">
-      <h1 class="text-xl tracking-tight text-balance font-medium font-display text-black md:text-8xl">
+      <h1 class="text-lg lg:text-7xl tracking-tight text-balance font-medium font-display text-black md:text-8xl">
         Andrew Hudson
       </h1>
     <p class="mt-9">
-    This is my website. I believe the best design is as little design as possible.
+    Good design is as little design as possible.
     </p>
+    <p class="mt-4">Dieter Rams</p>
     </div>
     
   </div>
