Refactor layout and styles in footer, navigation, and hero sections; add link underline styles

--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -1,14 +1,15 @@
-<section >
-  <div class="px-8 py-12 md:px-12 mx-auto lg:pb-24 max-w-7xl lg:px-32   lg:pt-32">
-    <div class="lg:text-center">
-      <h1 class="text-lg lg:text-7xl tracking-tight text-balance font-medium font-display text-black md:text-8xl">
-        Andrew Hudson
-      </h1>
-    <p class="mt-9">
-    Good design is as little design as possible.
-    </p>
-    <p class="mt-4">Dieter Rams</p>
+<section>
+  <div class="px-8 py-12 md:px-12 lg:px-32 lg:pt-32 lg:pb-24 mx-auto max-w-3xl">
+    <div class="max-w-xl text-left space-y-4">
+      <p>Andrew Hudson</p>
+      &nbsp;
+      <p>I live in Birmingham, Alabama and do software development consulting.</p>
+      <p>I love to build great software, particularly great interfaces.</p>
+      <p>In my spare time, I work on building <a class="link-underline" href="https://framewell.app">framewell.app</a>, which is my vision of what a web applicaton could be with every detail meticulously thought through and cared for.</p>
+      &nbsp;
+      &nbsp;
+      <p>Good design is as little design as possible.</p>
+      <p>Dieter Rams</p>
     </div>
-    
   </div>
 </section>
