--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -1,5 +1,5 @@
 <footer class="bg-white border-t">
-  <div class="px-8 md:px-12 mx-auto max-w-7xl py-6 lg:px-32">
+  <div class="px-8 md:px-12 mx-auto max-w-5xl py-6 lg:px-32 text-left">
     <section class="gap-y-6 gap-x-8">
       <div>
         <p
