--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -2,7 +2,7 @@
   class=" "
 
 >
-  <div class=" px-8 md:px-12 mx-auto max-w-7xl py-2  lg:px-32 text-xs">
+  <div class=" px-8  mx-auto max-w-7xl py-2   ">
     <div
       x-data="{ open: false }"
       class="relative flex flex-col w-full  mx-auto   rounded-xl md:rounded-full md:items-center md:justify-between md:flex-row "
