--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -90,7 +90,7 @@ html {
   text-decoration-line: underline;
   text-decoration-thickness: 1px;
   text-underline-offset: 0.2em;
-  text-decoration-color: #a3a3a3;
+  text-decoration-color: #c3c3c3;
   transition: text-decoration-color 150ms ease;
 }
 
